# timmyluxfurniture-interiorcreation

./: .gitignore  package-lock.json  package.json
server/: Cargo.toml  database.json  package-lock.json  package.json
server/migrations/: 20260125132649-create-users.js  20260125132900-create-refresh-tokens.js  20260126011420-add-profile-image-to-users.js  20260126014507-create-addresses.js  20260126231858-create-products.js  20260126233515-create-cart.js  20260127003117-create-wishlist.js
server/src/: app.js  auth.rs  config.rs  db.rs  helpers.rs  main.rs  middlewares.rs  server.js  types.rs
server/src/auth/: controller.rs  dto.rs  model.rs  route.rs  service.rs
server/src/config/: db.js  env.js  logger.js
server/src/database/: db.js
server/src/helpers/: email.rs  jwt.rs
server/src/middlewares/: auth.middleware.js  error.middleware.js  validate.middleware.js  verify_user.rs
server/src/migrations/: 20240124000001_create_users_table.sql.sql  20260124_create_refresh_tokens.sql
server/src/modules/auth/: auth.controller.js  auth.repository.js  auth.route.js  auth.service.js  auth.validation.js
server/src/modules/cart/: cart.controller.js  cart.repository.js  cart.route.js
server/src/modules/orders/: order.route.js
server/src/modules/products/: product.controller.js  product.repository.js  product.route.js  product.validation.js
server/src/modules/user/: user.controller.js  user.repository.js  user.route.js  user.service.js
server/src/order/: controller.rs  dto.rs  route.rs
server/src/scripts/: products.js
server/src/types/: app_state.rs  error.rs
(+70 files in other folders)
